@@ -72,11 +72,6 @@ importFrom(GOSemSim,getSupported_Org)
 importFrom(GOSemSim,loadGOMap)
 importFrom(KEGGREST,keggLink)
 importFrom(KEGGREST,keggList)
-importFrom(RDAVIDWebService,DAVIDWebService)
-importFrom(RDAVIDWebService,addList)
-importFrom(RDAVIDWebService,getFunctionalAnnotationChart)
-importFrom(RDAVIDWebService,getSpecieNames)
-importFrom(RDAVIDWebService,setAnnotationCategories)
 importFrom(ggplot2,"%+%")
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
