@@ -3,7 +3,5 @@
     ##	pkgVersion <- packageDescription(pkgname, fields="Version")
     ##	msg <- paste("\nWelcome to", pkgname, "version", pkgVersion, "\n")
     ##	packageStartupMessage(msg)
-
-
     .initial()
 }
