@@ -1,5 +1,7 @@
 CHANGES IN VERSION 2.3.1
 ------------------------
+ o remove import RDAVIDWebService <2015-04-29, Wed>
+ o update buildGOmap <2015-04-29, Wed>
  o remove import KEGG.db <2015-04-29, Wed>
  
 CHANGES IN VERSION 2.1.14
